old_project/logs/live_data_updater_20250823_003819.log
  File "/Users/georgemajor/Jibber Jabber ChatGPT/8_august_jibber_jabber/live_data_updater.py", line 127
    }
    ^
SyntaxError: unmatched '}'
